<resources>
    <string name="app_name">Parts Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PartsRequest</string>
    <string name="nav_header_subtitle">BR_IT_Oracle_Suporte@diebold.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Salvar</string>
    <string name="action_refresh">Atualizar</string>
    <string name="activity_reposicao">Nova Solicitação</string>
    <string name="activity_devolucao">Nova Devolução</string>
    <string name="activity_edicao">Editando</string>
    <string name="activity_abertos">Pedidos Abertos</string>
    <string name="activity_enviados">Pedidos Em Transporte</string>
    <string name="activity_finalizados">Pedidos Finalizados</string>
    <string name="activity_cancelados">Pedidos Cancelados</string>
    <string name="activity_pendentes">Pedidos Pendentes</string>
    <string name="activity_erros">Pedidos com Problemas</string>
    <string name="activity_detalhes">Detalhes do Pedido</string>
    <string name="menu_solicitacao">Nova Solicitação</string>
    <string name="menu_editar_pedido">Editar Pedido</string>
    <string name="menu_atualizacao">Atualizações</string>
    <string name="menu_configuracao">Configurações</string>
    <string name="menu_atualizacao_senha">Atualizar Senha</string>
    <string name="menu_informacoes">Informações</string>
    <string name="menu_senha">Atualizar Senha</string>
    <string name="menu_ambiente">Ambiente</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_politica">Política de Privacidade</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Parts Request - Status</string>
    <string name="menu_reposicao">Reposição de Peças</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_adm">Admin</string>
    <string name="btn_add_order">Adicionar Pedido</string>
    <string name="btn_atualizar_itau">Atualizar Códigos Itaú</string>
    <string name="btn_atualizar_nfs">Atualizar NFs novamente</string>
    <string name="btn_atualizar_estrutura_produtos">Atualizar estrutura de produtos</string>
    <string name="btn_atualizar_senha">Atualizar senha</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="btn_enviar_logs">Enviar Logs</string>
    <string name="btn_testar_conexao">Testar Conexão</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Seja bem vindo(a)! "</string>
    <string name="invalid_username">Username inválido!</string>
    <string name="invalid_password">Senha precisa ter mais de 5 caracteres</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="versao">Versão 1.2.0</string>
    <string name="tab_enviados">TRANSPORTE</string>
    <string name="tab_finalizados">FINALIZADOS</string>
    <string name="tab_novo_pedido">NOVO PEDIDO</string>
    <string name="card_status_abertos">ABERTOS</string>
    <string name="card_status_enviados">TRANSPORTE</string>
    <string name="card_status_finalizados">FINALIZADOS</string>
    <string name="card_status_cancelados">CANCELADOS</string>
    <string name="card_status_pendente">PENDENTES</string>
    <string name="card_status_erros">PROBLEMAS</string>
    <string name="task">TASK</string>
    <string name="site">SITE</string>
    <string name="date_solicitacao">DATA SOLICITACAO</string>
    <string name="date_agendamento">DATA AGENDAMENTO</string>
    <string name="id_pedido_db">Pedido:</string>
    <string name="id_pedido_ws">Pedido:</string>
    <string name="infoEntregador">Informações do Entregador </string>
    <string name="nomeEntregador">Nome: </string>
    <string name="telefoneEntregador">Telefone: </string>
    <string name="observacao">Observações: </string>
    <string name="atividade">Atividade: 101 - CORRETIVA</string>
    <string name="atendimento">SLA Atendimento: 24/05/2021 10:12:00</string>
    <string name="solucao">SLA Solução: 24/05/2021 16:12:00</string>
    <string-array name="status">
        <item>Selecione o Status</item>
        <item>Aberto</item>
        <item>Em Análise</item>
        <item>Em Separação</item>
        <item>Emitindo NF</item>
        <item>Aguardando Previsão</item>
        <item>Aguardando Envio</item>
        <item>Em Transporte</item>
        <item>Finalizado</item>
        <item>Cancelado</item>
    </string-array>
    <string name="status_pedido">Status do Pedido</string>
    <string name="previsao">Previsão: 24/05/2021</string>
    <string name="endereco1">Av. Paulista 1000 Bela Vista</string>
    <string name="endereco2">01311-000 São Paulo SP Brasil</string>
    <string name="msg_atualizacao">Atualizando...\nPor favor, aguarde nessa tela!</string>
    <string name="dados_usuario">Dados do Usuário</string>
    <string name="configuracao_tecnico">Técnico: </string>
    <string name="configuracao_numero_tecnico">Nº Técnico: </string>
    <string name="configuracao_numero_ems">Número EMS:</string>
    <string name="configuracao_telefone">Telefone: </string>
    <string name="configuracao_filialModel">Filial: </string>
    <string name="info_gerais">Informações gerais</string>
    <string name="url_ambiente">Ambiente de trabalho:</string>
    <string name="intervalo">Intervalo AutoSync(Segundos)</string>
    <string name="ambiente_servidor_diebold">Ambiente Servidor Diebold</string>
    <string name="teste_comunicacao_servidor">Teste de Comunicação com o Servidor</string>
    <string name="status_servidor_diebold">Servidor Diebold:</string>
    <string name="status_rede_dados_aparelho">Rede de Dados do Aparelho: </string>
    <string name="seconds">60</string>
    <string name="atencao">Atenção</string>
    <string name="ok">OK</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="pagina">Página</string>
    <string name="atualizacao_atencao_msg">A atualização da Estrutura de Produtos pode levar alguns minutos. Deseja continuar mesmo assim?</string>
    <string name="atualizacao_atualizando_estrutura_titulo">Atualizando Estrutura de Produtos…</string>
    <string name="atualizacao_senha_atencao_msg">Por questões de segurança, você precisa atualizar sua senha!</string>
    <string name="atualizacao_senha_msg">Tem certeza que deseja atualizar a senha?</string>
    <string-array name="localizacao">
        <item>Selecione a Localização</item>
        <item>Local</item>
        <item>Residente</item>
    </string-array>
    <string-array name="tipo">
        <item>Entrega</item>
        <item>Devolução</item>
    </string-array>
</resources>