<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_informacoes"
        android:orderInCategory="100"
        android:title="@string/menu_informacoes"
        android:icon="@drawable/ic_refresh_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ambiente"
        android:orderInCategory="100"
        android:title="@string/menu_ambiente"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_senha"
        android:orderInCategory="100"
        android:title="@string/menu_senha"
        app:showAsAction="never" />

<!--    <item-->
<!--        android:id="@+id/action_logs"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/menu_logs"-->
<!--        app:showAsAction="never" />-->
</menu>