<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- item 1 -->
    <LinearLayout
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/list_item_title"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/idPedidoWS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1.5"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/id_pedido_ws"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/tipoPedido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="end"
                android:singleLine="true"
                android:text="Tipo do Pedido"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/statusPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="3"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/status_pedido"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_size_small"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/task1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="3"
                android:singleLine="true"
                android:text="@string/task"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/site1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="3"
                android:singleLine="true"
                android:text="@string/site"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/font_size_small"
                android:textStyle="bold" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="3dp"-->
<!--            android:layout_marginTop="0dp"-->
<!--            android:layout_marginBottom="0dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="3">-->

<!--            <TextView-->
<!--                android:id="@+id/data1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="3dp"-->
<!--                android:layout_marginTop="3dp"-->
<!--                android:layout_weight="2.8"-->
<!--                android:gravity="start"-->
<!--                android:text="@string/date_agendamento"-->
<!--                android:textColor="@color/blue"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="@dimen/font_size_small" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/previsao1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:singleLine="true"
                android:layout_weight="3"
                android:text="@string/previsao"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/atendimento1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:singleLine="true"
                android:layout_weight="3"
                android:text="@string/atendimento"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/solucao1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="3"
                android:singleLine="true"
                android:text="@string/solucao"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>