<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.configuracao.AtualizacaoSenhaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/frameDadosPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/list_item_title"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtNovaSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:hint="@string/nova_senha"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itConfirmarNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/edtConfirmarNovaSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:hint="@string/confirmar_nova_senha"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/edtNovaSenha"
                    app:layout_constraintStart_toStartOf="@+id/edtNovaSenha"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAtualizarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_atualizar_senha"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                app:layout_constraintEnd_toEndOf="@+id/edtConfirmarNovaSenha"
                app:layout_constraintStart_toStartOf="@+id/edtConfirmarNovaSenha"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="eventAtualizarSenha"
                style="@style/ButtonStyleGray"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>